CHANGES
*******

3.3.1 (unreleased)
==================

- Update to Bootstrap 3.3.1 [pabo3000]


3.2 (2014-09-03)
================

- Update to Bootstrap 3.2 [amleczko]
- Add map files [neglectedvalue]


3.1.1 (2014-04-23)
==================

- Update to Bootstrap 3.1.1.
  [davidjb]


3.0.2 (2013-12-14)
==================

- update to bootstrap 3.0.2


3.0.0.2 (2013-12-14)
====================

- include missing font's in manifest [dnozay]


3.0.0.1 (2013-10-01)
====================

- include missing theme.css [dairiki]


3.0 (2013-09-30)
================

- update to bootstrap 3.0 [Christian Klinger]


2.3.2 (2013-08-02)
==================

- updated to bootstrap 2.3.2 [tmassman]


2.3.1 (2013-03-08)
==================

- Upgrade to bootstrap 2.3.1 [disko]


2.3.0 (2013-02-26)
==================

- Upgraded to bootstrap 2.3.0 [amleczko]


2.2.2 (2012-12-11)
==================

- Upgrade to bootstrap 2.2.2 [disko]


2.1.6 (2012-10-25)
==================

- Upgrade to bootstrap 2.1.1 [disko]


2.1.5 (2012-08-22)
==================

- pin to boostrap 2.1 [amleczko]

2.1.3.1 (2012-05-23)
====================

- fix problem with readme.rst and manifest.ini [amleczko]

2.1.3 (2012-05-19)
==================

- Update to bootstrap 2.0.3 [amleczko]

2.1.1 (2012-03-01)
==================

- Pin to bootstrap version 2.0.1 [amleczko]

2.1 (2012-02-01)
================

- add also bootstrap images [amleczko]

2.0 (2012-02-01)
================

- update to twitter bootstrap 2.0 [amleczko]

1.4 (09-11-2011)
================

- update to twitter bootstrap 1.4 [amleczko]

1.3.2 (30-09-2011)
==================

- update bootstrap.css to proper 1.3.0 version [amleczko]

1.3.1 (29-09-2011)
==================

- fix javascript dependency problems [amleczko]

1.3.0 (28-09-2011)
==================

- Initial release - using bootstrap 1.3.0 [amleczko]