@@ -5,6 +5,7 @@ CHANGES
 ==================
 
 - Update to Bootstrap 3.3.1 [pabo3000]
+- update bootstrap.py [pabo3000]
 
 
 3.2 (2014-09-03)
